--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -13,7 +13,10 @@
         {% endif %}
     </div>
     <div class="col-2">
-        <button type="button" class="btn btn-outline-primary">Apply</button>
+        <a href="mailto:hello@jovian.ai?subject=Application%20for%20{{job['title']}}&body=My%20name%3A%3Cyour%20name%20here%3E%0D%0AMy%20Resume%20link%3A%3Cresume%20link%3E%0D%0AMy%20linkedin%20link%3A%3Clinkedin%20ln%3E"
+         type="button"
+         class="btn btn-outline-primary">Apply
+        </a>
     </div>
     
 </div>
